--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,66 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Emma Bentley Music
+email: contact@emmabentleymusic.com
+description: >-
+  Professional musician and music educator offering private lessons and performances.
+baseurl: ""
+url: ""
 
 # Build settings
-theme: minima
+markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+
+# Social media
+social:
+  linkedin: ""
+  youtube: ""
+
+# Collections
+collections:
+  testimonials:
+    output: false
+  performances:
+    output: true
+    permalink: /performances/:path/
+
+# Default layouts
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: page
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: post
+  - scope:
+      path: ""
+      type: "performances"
+    values:
+      layout: performance
+
+# Navigation
+nav_links:
+  - title: Home
+    url: /
+  - title: About
+    url: /about/
+  - title: Teaching Studio
+    url: /teaching/
+  - title: Portfolio
+    url: /portfolio/
+  - title: Contact
+    url: /contact/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
