--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Emma Bentley Music
-email: contact@emmabentleymusic.com
+email: emmabentleymusic@gmail.com
 description: >-
   Professional musician and music educator offering private lessons and performances.
 baseurl: ""
